@@ -1,3 +1,8 @@
+Tue Jun 30 12:49:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* flax/searchserver/jstemplates.py: Slightly more robust template
+	  calling.
+
 Tue Jun 30 12:09:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchserver/application.py: Fix copy-and-paste bug.
